--- a/openshift/templates/nginx.json
+++ b/openshift/templates/nginx.json
@@ -69,7 +69,8 @@
       "kind": "BuildConfig",
       "apiVersion": "v1",
       "metadata": {
-        "name": "${NAME}"
+        "name": "${NAME}",
+        "namespace": "${NAMESPACE}"
       },
       "spec": {
         "source": {
@@ -93,7 +94,8 @@
         "output": {
           "to": {
             "kind": "ImageStreamTag",
-            "name": "${NAME}:latest"
+            "name": "${NAME}:latest",
+            "namespace": "${NAMESPACE}"
           }
         },
         "triggers": [
