--- a/nginx.conf
+++ b/nginx.conf
@@ -39,12 +39,13 @@ http {
         listen       8080 default_server;
         listen       [::]:8080 default_server;
         server_name  _;
-        root         /opt/app-root/src;
+
+        location / {
+            root /repo/;
+        }
 
         # Load configuration files for the default server block.
         include /opt/app-root/etc/nginx.default.d/*.conf;
-
-
     }
 
 # Settings for a TLS enabled server.
