--- a/containers/serve/nginx.conf
+++ b/containers/serve/nginx.conf
@@ -1,8 +1,3 @@
-# For more information on configuration, see:
-#   * Official English Documentation: http://nginx.org/en/docs/
-#   * Official Russian Documentation: http://nginx.org/ru/docs/
-
-
 worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
@@ -36,8 +31,8 @@ http {
     include /opt/app-root/etc/nginx.d/*.conf;
 
     server {
-        listen       8080 default_server;
-        listen       [::]:8080 default_server;
+        listen       8080 ssl;
+        listen       [::]:8080 ssl;
         server_name  _;
 
         location / {
@@ -46,28 +41,31 @@ http {
 
         # Load configuration files for the default server block.
         include /opt/app-root/etc/nginx.default.d/*.conf;
+
+        ssl_client_certificate /secrets/client-ca.crt;
+        ssl_verify_client on;
     }
 
 # Settings for a TLS enabled server.
 #
-#    server {
-#        listen       443 ssl http2;
-#        listen       [::]:443 ssl http2;
-#        server_name  _;
-#        root         /opt/app-root/src;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers PROFILE=SYSTEM;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /opt/app-root/etc/nginx.default.d/*.conf;
-#
-#
-#    }
+    server {
+        listen       443 ssl http2;
+        listen       [::]:443 ssl http2;
+        server_name  _;
+        root         /opt/app-root/src;
+
+        ssl_certificate "/etc/pki/nginx/server.crt";
+        ssl_certificate_key "/etc/pki/nginx/private/server.key";
+        ssl_session_cache shared:SSL:1m;
+        ssl_session_timeout  10m;
+        ssl_ciphers PROFILE=SYSTEM;
+        ssl_prefer_server_ciphers on;
+
+        # Load configuration files for the default server block.
+        include /opt/app-root/etc/nginx.default.d/*.conf;
+
+
+    }
 
 }
 
