--- a/containers/serve/nginx.conf
+++ b/containers/serve/nginx.conf
@@ -30,32 +30,29 @@ http {
     # for more information.
     include /opt/app-root/etc/nginx.d/*.conf;
 
+    server { 
+        listen       8080;
+        server_name _;
+
+        location /ready {
+            return 200;
+        }
+    }
+
     server {
-        listen       8080 ssl;
-        listen       [::]:8080 ssl;
+        listen       443 ssl http2;
+        listen       [::]:443 ssl http2;
         server_name  _;
 
         location / {
             root /repo/;
         }
 
-        # Load configuration files for the default server block.
-        include /opt/app-root/etc/nginx.default.d/*.conf;
-
-        ssl_client_certificate /secrets/client-ca.crt;
         ssl_verify_client on;
-    }
-
-# Settings for a TLS enabled server.
-#
-    server {
-        listen       443 ssl http2;
-        listen       [::]:443 ssl http2;
-        server_name  _;
-        root         /opt/app-root/src;
-
-        ssl_certificate "/etc/pki/nginx/server.crt";
-        ssl_certificate_key "/etc/pki/nginx/private/server.key";
+        ssl_client_certificate /client-auth/client_ca.crt;
+        ssl_certificate "/acme/tls.crt";
+        ssl_verify_depth 5;
+        ssl_certificate_key "/acme/tls.key";
         ssl_session_cache shared:SSL:1m;
         ssl_session_timeout  10m;
         ssl_ciphers PROFILE=SYSTEM;
@@ -63,8 +60,6 @@ http {
 
         # Load configuration files for the default server block.
         include /opt/app-root/etc/nginx.default.d/*.conf;
-
-
     }
 
 }
